--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
     {% extends "base.html" %}
     {% block content %}
     <h1>Hi, {{ current_user.username }}!</h1>
+    {% if form %}
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
@@ -24,10 +25,9 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+    {% endif %}
     {% for post in posts %}
-    <p>
-        {{ post.author.username }} says: <b>{{ post.body }}</b>
-    </p>
+        {% include '_post.html' %}
     {% endfor %}
     {% endblock %}
 
